spacing fix

--- a/services/homepage/src/styles/styles.scss
+++ b/services/homepage/src/styles/styles.scss
@@ -1346,6 +1346,7 @@ ul
 }
 .testimoialsWrapper
 {
+  padding-bottom: 30px;
   .sectionHeader
   {
     text-align: center;
